[package]
name = "harmony"
authors = ["Cryptex"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros", "sync", "signal", "parking_lot"] }
log = "0.4"
tokio-tungstenite = "0.20"
anyhow = "1.0"
qstring = "0.7"
amqprs = { version = "1.5", features = ["traces"] }
uuid = { version = "1.5", features = ["v4", "fast-rng"] }
ahash = "0.8"
async-trait = "0.1"
futures-util = "0.3"
simd-json = "0.13"
rmp-serde = "1.1"
serde = "1"

[profile.ci]
debug = 2
inherits = "dev"
