[package]
name = "harmony"
authors = ["Cryptex"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros", "sync", "signal", "parking_lot"] }
log = "0.4"
tokio-tungstenite = "0.20"
anyhow = "1.0"
qstring = "0.7"
amqprs = { version = "1.5", features = ["traces"] }
uuid = { version = "1.5", features = ["v4", "fast-rng"] }
ahash = "0.8"
async-trait = "0.1"
futures-util = "0.3"
simd-json = "0.13"
essence = { git = "https://github.com/AdaptChat/essence.git", features = ["db"] }
rmp-serde = "1.1"
serde = "1"
dotenvy = "0.15"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
deadpool-redis = "0.13"
chrono = "0.4"

[profile.ci]
debug = 2
inherits = "dev"
